--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "cut": "node cut_sizes.js",
+    "clean": "rm -f resized-*.png"
+  },
   "devDependencies": {
+    "chrome-launcher": "^0.4.0",
     "chromeless": "^1.2.0",
     "sharp": "^0.18.2"
+  },
+  "dependencies": {
+    "uuid": "^3.1.0"
   }
 }
